--- a/references.bib
+++ b/references.bib
@@ -168,6 +168,14 @@
   year={1970}
 }
 
+@software{heek2020github,
+  author = {Jonathan Heek and Anselm Levskaya and Avital Oliver and Marvin Ritter and Bertrand Rondepierre and Andreas Steiner and Marc van {Z}ee},
+  title = {{F}lax: A neural network library and ecosystem for {JAX}},
+  url = {http://github.com/google/flax},
+  version = {0.12.3},
+  year = {2024},
+}
+
 @article{hoffman2014no,
   title={The no-{U}-turn sampler: adaptively setting path lengths in {H}amiltonian {M}onte {C}arlo},
   author={Hoffman, Matthew D and Gelman, Andrew},
@@ -200,6 +208,20 @@
     author={Patrick Kidger},
     year={2021},
     school={University of Oxford},
+}
+
+@article{kochkov2021cfd,
+  author = {Kochkov, Dmitrii and Smith, Jamie A. and Alieva, Ayya and Wang, Qing and Brenner, Michael P. and Hoyer, Stephan},
+  title = {Machine learning{\textendash}accelerated computational fluid dynamics},
+  volume = {118},
+  number = {21},
+  elocation-id = {e2101784118},
+  year = {2021},
+  doi = {10.1073/pnas.2101784118},
+  issn = {0027-8424},
+  URL = {https://www.pnas.org/content/118/21/e2101784118},
+  eprint = {https://www.pnas.org/content/118/21/e2101784118.full.pdf},
+  journal = {Proceedings of the National Academy of Sciences}
 }
 
 @article{kucukelbir2017automatic,
